Update semantic HTML structure

--- a/index.html
+++ b/index.html
@@ -19,11 +19,116 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
   <body>
-    Report for Jeremy Robson Daily Weekly Monthly Work 5hrs
+    <main>
+      <article class="card profile-card">
+        <section class="profile">
+          <img src="images/image-jeremy.png" alt="Profile picture" />
+          <p>Report for</p>
+          <h1>Jeremy Robson</h1>
+        </section>
+        <div>
+          <span>Daily</span>
+          <!-- weekly for first styling -->
+          <span>Weekly</span>
+          <span>Monthly</span>
+        </div>
+      </article>
+      <article class="card">
+        <div class="back">
+          <img src="images/icon-work.svg" alt="icon work" />
+        </div>
+        <section>
+          <header>
+            <span>Work</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>32hrs</span>
+            <span>Previous - 36hrs</span>
+          </main>
+        </section>
+      </article>
+      <article class="card">
+        <div class="back">
+          <img src="images/icon-play.svg" alt="icon play" />
+        </div>
+        <section>
+          <header>
+            <span>Play</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>10hrs</span>
+            <span>Previous - 8hrs</span>
+          </main>
+        </section>
+      </article>
+      <article class="card">
+        <div class="back">
+          <img src="images/icon-study.svg" alt="icon study" />
+        </div>
+        <section>
+          <header>
+            <span>Study</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>4hrs</span>
+            <span>Previous - 7hrs</span>
+          </main>
+        </section>
+      </article>
+      <article class="card">
+        <div class="back">
+          <img src="images/icon-exercise.svg" alt="icon work" />
+        </div>
+        <section>
+          <header>
+            <span>Exercise</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>4hrs</span>
+            <span>Previous - 5hrs</span>
+          </main>
+        </section>
+      </article>
+      <article class="card">
+        <div class="back">
+          <img src="images/icon-social.svg" alt="icon work" />
+        </div>
+        <section>
+          <header>
+            <span>Social</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>5hrs</span>
+            <span>Previous - 10hrs</span>
+          </main>
+        </section>
+      </article>
+      <article class="card">
+        <div class="back">
+          <img src="images/icon-self-care.svg" alt="icon work" />
+        </div>
+        <section>
+          <header>
+            <span>Self Care</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>2hrs</span>
+            <span>Previous - 2hrs</span>
+          </main>
+        </section>
+      </article>
+    </main>
+    Work 5hrs
     <!-- daily -->
     Previous - 7hrs
     <!-- daily -->
-    32hrs
+
     <!-- weekly -->
     Previous - 36hrs
     <!-- weekly -->
