Add base styling + Working on profile styling

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
       <article class="card profile-card">
         <section class="profile">
           <img src="images/image-jeremy.png" alt="Profile picture" />
-          <p>Report for</p>
-          <h1>Jeremy Robson</h1>
+          <div>
+            <p>Report for</p>
+            <h1>Jeremy Robson</h1>
+          </div>
         </section>
-        <div>
+        <div class="content-container time-options">
           <span>Daily</span>
           <!-- weekly for first styling -->
           <span>Weekly</span>
@@ -37,10 +39,10 @@
         <div class="back">
           <img src="images/icon-work.svg" alt="icon work" />
         </div>
-        <section>
+        <section class="content-container">
           <header>
             <span>Work</span>
-            <img src="images/icon-ellipsis.svg" alt="more icon" />
+            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
           </header>
           <main>
             <span>32hrs</span>
@@ -52,10 +54,10 @@
         <div class="back">
           <img src="images/icon-play.svg" alt="icon play" />
         </div>
-        <section>
+        <section class="content-container">
           <header>
             <span>Play</span>
-            <img src="images/icon-ellipsis.svg" alt="more icon" />
+            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
           </header>
           <main>
             <span>10hrs</span>
@@ -67,10 +69,10 @@
         <div class="back">
           <img src="images/icon-study.svg" alt="icon study" />
         </div>
-        <section>
+        <section class="content-container">
           <header>
             <span>Study</span>
-            <img src="images/icon-ellipsis.svg" alt="more icon" />
+            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
           </header>
           <main>
             <span>4hrs</span>
@@ -82,10 +84,10 @@
         <div class="back">
           <img src="images/icon-exercise.svg" alt="icon work" />
         </div>
-        <section>
+        <section class="content-container">
           <header>
             <span>Exercise</span>
-            <img src="images/icon-ellipsis.svg" alt="more icon" />
+            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
           </header>
           <main>
             <span>4hrs</span>
@@ -97,10 +99,10 @@
         <div class="back">
           <img src="images/icon-social.svg" alt="icon work" />
         </div>
-        <section>
+        <section class="content-container">
           <header>
             <span>Social</span>
-            <img src="images/icon-ellipsis.svg" alt="more icon" />
+            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
           </header>
           <main>
             <span>5hrs</span>
@@ -112,10 +114,10 @@
         <div class="back">
           <img src="images/icon-self-care.svg" alt="icon work" />
         </div>
-        <section>
+        <section class="content-container">
           <header>
             <span>Self Care</span>
-            <img src="images/icon-ellipsis.svg" alt="more icon" />
+            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
           </header>
           <main>
             <span>2hrs</span>
@@ -124,82 +126,5 @@
         </section>
       </article>
     </main>
-    Work 5hrs
-    <!-- daily -->
-    Previous - 7hrs
-    <!-- daily -->
-
-    <!-- weekly -->
-    Previous - 36hrs
-    <!-- weekly -->
-    103hrs
-    <!-- monthly -->
-    Previous - 128hrs
-    <!-- monthly -->
-
-    Play 1hr
-    <!-- daily -->
-    Previous - 2hrs
-    <!-- daily -->
-    10hrs
-    <!-- weekly -->
-    Previous - 8hrs
-    <!-- weekly -->
-    23hrs
-    <!-- monthly -->
-    Previous - 29hrs
-    <!-- monthly -->
-
-    Study 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 7hrs
-    <!-- weekly -->
-    13hrs
-    <!-- monthly -->
-    Previous - 19hrs
-    <!-- monthly -->
-
-    Exercise 1hr
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 5hrs
-    <!-- weekly -->
-    11hrs
-    <!-- monthly -->
-    Previous - 18hrs
-    <!-- monthly -->
-
-    Social 1hr
-    <!-- daily -->
-    Previous - 3hrs
-    <!-- daily -->
-    5hrs
-    <!-- weekly -->
-    Previous - 10hrs
-    <!-- weekly -->
-    21hrs
-    <!-- monthly -->
-    Previous - 23hrs
-    <!-- monthly -->
-
-    Self Care 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    2hrs
-    <!-- weekly -->
-    Previous - 2hrs
-    <!-- weekly -->
-    7hrs
-    <!-- monthly -->
-    Previous - 11hrs
-    <!-- monthly -->
   </body>
 </html>
