Style profile card

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
   <body>
-    <main>
+    <main class="main-container">
       <article class="card profile-card">
         <section class="profile">
           <img src="images/image-jeremy.png" alt="Profile picture" />
