Add basic card style pt.1

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </article>
       <article class="card">
-        <div class="back">
+        <div class="back work">
           <img src="images/icon-work.svg" alt="icon work" />
         </div>
         <section class="content-container">
@@ -51,7 +51,7 @@
         </section>
       </article>
       <article class="card">
-        <div class="back">
+        <div class="back play">
           <img src="images/icon-play.svg" alt="icon play" />
         </div>
         <section class="content-container">
@@ -66,7 +66,7 @@
         </section>
       </article>
       <article class="card">
-        <div class="back">
+        <div class="back study">
           <img src="images/icon-study.svg" alt="icon study" />
         </div>
         <section class="content-container">
@@ -81,8 +81,8 @@
         </section>
       </article>
       <article class="card">
-        <div class="back">
-          <img src="images/icon-exercise.svg" alt="icon work" />
+        <div class="back exercise">
+          <img src="images/icon-exercise.svg" alt="icon exercise" />
         </div>
         <section class="content-container">
           <header>
@@ -96,8 +96,8 @@
         </section>
       </article>
       <article class="card">
-        <div class="back">
-          <img src="images/icon-social.svg" alt="icon work" />
+        <div class="back social">
+          <img src="images/icon-social.svg" alt="icon social" />
         </div>
         <section class="content-container">
           <header>
@@ -111,8 +111,8 @@
         </section>
       </article>
       <article class="card">
-        <div class="back">
-          <img src="images/icon-self-care.svg" alt="icon work" />
+        <div class="back self-care">
+          <img src="images/icon-self-care.svg" alt="icon self-care" />
         </div>
         <section class="content-container">
           <header>
