Finish styling mobile version

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>Jeremy Robson</h1>
           </div>
         </section>
-        <div class="content-container time-options">
+        <div class="time-options">
           <span>Daily</span>
           <!-- weekly for first styling -->
           <span>Weekly</span>
