Add desktop styling + responsive styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="content-container">
           <header>
             <span>Work</span>
-            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
           </header>
           <main>
             <span>32hrs</span>
@@ -57,7 +57,7 @@
         <section class="content-container">
           <header>
             <span>Play</span>
-            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
           </header>
           <main>
             <span>10hrs</span>
@@ -72,7 +72,7 @@
         <section class="content-container">
           <header>
             <span>Study</span>
-            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
           </header>
           <main>
             <span>4hrs</span>
@@ -87,7 +87,7 @@
         <section class="content-container">
           <header>
             <span>Exercise</span>
-            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
           </header>
           <main>
             <span>4hrs</span>
@@ -102,7 +102,7 @@
         <section class="content-container">
           <header>
             <span>Social</span>
-            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
           </header>
           <main>
             <span>5hrs</span>
@@ -117,7 +117,7 @@
         <section class="content-container">
           <header>
             <span>Self Care</span>
-            <span><img src="images/icon-ellipsis.svg" alt="more icon" /> </span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
           </header>
           <main>
             <span>2hrs</span>
