Change time options to buttons + Add basic event listeners

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           </div>
         </section>
         <div class="time-options">
-          <span>Daily</span>
+          <button type="button" id="daily">Daily</button>
           <!-- weekly for first styling -->
-          <span>Weekly</span>
-          <span>Monthly</span>
+          <button type="button" id="weekly">Weekly</button>
+          <button type="button" id="monthly">Monthly</button>
         </div>
       </article>
       <article class="card">
@@ -126,5 +126,6 @@
         </section>
       </article>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
