Fix displayed data on page load

--- a/index.html
+++ b/index.html
@@ -39,37 +39,91 @@
         <div class="back work">
           <img src="images/icon-work.svg" alt="icon work" />
         </div>
-        <section class="content-container"></section>
+        <section class="content-container">
+          <header>
+            <span>Work</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>32hrs</span>
+            <span>Previous - 36hrs</span>
+          </main>
+        </section>
       </article>
       <article class="card">
         <div class="back play">
           <img src="images/icon-play.svg" alt="icon play" />
         </div>
-        <section class="content-container"></section>
+        <section class="content-container">
+          <header>
+            <span>Play</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>10hrs</span>
+            <span>Previous - 8hrs</span>
+          </main>
+        </section>
       </article>
       <article class="card">
         <div class="back study">
           <img src="images/icon-study.svg" alt="icon study" />
         </div>
-        <section class="content-container"></section>
+        <section class="content-container">
+          <header>
+            <span>Study</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>4hrs</span>
+            <span>Previous - 7hrs</span>
+          </main>
+        </section>
       </article>
       <article class="card">
         <div class="back exercise">
           <img src="images/icon-exercise.svg" alt="icon exercise" />
         </div>
-        <section class="content-container"></section>
+        <section class="content-container">
+          <header>
+            <span>Exercise</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>4hrs</span>
+            <span>Previous - 5hrs</span>
+          </main>
+        </section>
       </article>
       <article class="card">
         <div class="back social">
           <img src="images/icon-social.svg" alt="icon social" />
         </div>
-        <section class="content-container"></section>
+        <section class="content-container">
+          <header>
+            <span>Social</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>5hrs</span>
+            <span>Previous - 10hrs</span>
+          </main>
+        </section>
       </article>
       <article class="card">
         <div class="back self-care">
           <img src="images/icon-self-care.svg" alt="icon self-care" />
         </div>
-        <section class="content-container"></section>
+        <section class="content-container">
+          <header>
+            <span>Self Care</span>
+            <img src="images/icon-ellipsis.svg" alt="more icon" />
+          </header>
+          <main>
+            <span>2hrs</span>
+            <span>Previous - 2hrs</span>
+          </main>
+        </section>
       </article>
     </main>
     <script src="script.js"></script>
